fixed box shadow of header with z-index

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     margin: 0px;
     padding: 0px;
     font-family: 'Roboto', 'Times New Roman', Times, serif;
+    background-color: #ddd;
 }
 
 .container{
@@ -60,7 +61,9 @@ body{
 }
 
 .header{
-    
+    background-color: #fff;
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.2);
+    z-index: 2;
 }
 
 .topHeader{
@@ -153,9 +156,9 @@ body{
 .content{
     padding: 20px;
     display: grid;
-    background-color: #ddd;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    z-index: 1;
 }
 
 .projectContainer{
